--- a/src/main/resources/static/todo.html
+++ b/src/main/resources/static/todo.html
@@ -46,12 +46,16 @@
         <form @submit.prevent="onSubmit">
             <div class="d-flex">
                 <div class="flex-grow-1 mr-2">
-                    <input class="form-control" type="text" v-model="title" placeholder="Input new to-do title"/>
-                    <input class="form-control mt-2" type="text" v-model="description"
+                    <input class="form-control" type="text" v-model.trim="title" placeholder="Input new to-do title"/>
+                    <input class="form-control mt-2" type="text" v-model.trim="description"
                            placeholder="Input new to-do description"/>
                 </div>
                 <div>
                     <button class="btn text-white" style="background-color: #000000" type="submit">Save</button>
+                    <!--콘솔에 GET-->
+                    <button class="btn text-white" style="background-color: #007bff" @click.prevent="fetchTodos">Fetch
+                        Todos
+                    </button>
                 </div>
             </div>
             <div v-show="hasError" style="color: red">Both fields are required:)</div>
@@ -151,6 +155,21 @@
                         console.error('Error saving todo : ', error);
                     });
             },
+            fetchTodos: function () {
+                var self = this;
+                axios.get('/todos/list')
+                    .then(function (response) {
+                        console.log('Todos fetched successfully : ', response.data);
+                        console.log(response.data.todos);
+                        self.todos = response.data.todos || [];  // todos 데이터가 없을 경우 빈 배열로 설정
+                        self.hasError = false;
+                    })
+                    .catch(function (error) {
+                        console.error('Error fetching todos : ', error);
+                        self.todos = [];  // 오류 발생 시 빈 배열로 설정
+                        self.hasError = true;
+                    });
+            },
             toggleTodo: function (index) {
                 var self = this;
                 // 선택한 체크박스의 값을 반대 값으로 변경 ex) 완료 check -> 미완료 / 미완료 check -> 완료
@@ -164,6 +183,7 @@
             },
             saveEdit: function (index) {
                 var self = this;
+
                 // 수정 후 불변성 유지
                 const editedTodo = {
                     id: self.todos[index].id,
